--- a/index.html
+++ b/index.html
@@ -46,11 +46,7 @@
       position:relative;
       overflow:visible;
     }
-    .profile-container svg {
-      width:100%;
-      height:100%;
-      display:block;
-    }
+    .profile-container svg {width:100%;height:100%;display:block}
     @keyframes floatMove {
       0%,100%{transform:translateY(0)}
       50%{transform:translateY(-6px)}
@@ -96,14 +92,72 @@
       transform:translateY(-2px);
     }
 
-    .frame-wrapper {
-      width:95%;max-width:900px;aspect-ratio:16/9;
-      border-radius:16px;overflow:hidden;
-      margin-top:10px;
-      background:rgba(0,0,0,0.25);backdrop-filter:blur(4px);
-      animation:fadeInUp 1.4s ease forwards;opacity:0;transform:translateY(10px);
+    .about-box {
+      position:relative;
+      max-width:900px;
+      background:rgba(255,255,255,0.08);
+      padding:18px;
+      border-radius:16px;
+      line-height:1.8;
+      font-size:clamp(0.9rem,3vw,1rem);
+      text-align:justify;
+      margin-bottom:18px;
+      box-shadow:0 0 12px rgba(180,100,255,0.3);
+      animation:floatBox 7s ease-in-out infinite;
+      overflow-y:auto;
+      max-height:40vh;
+      -webkit-overflow-scrolling: touch;
     }
-    .frame-wrapper iframe {width:100%;height:100%;border:none;display:block;border-radius:16px}
+
+    /* ✅ چپ و راست چین شدن متن درباره من بر اساس زبان */
+    body.lang-en .about-box {
+      text-align:justify;
+      text-align-last:left;
+    }
+    body:not(.lang-en) .about-box {
+      text-align:justify;
+      text-align-last:right;
+    }
+
+    @keyframes floatBox {
+      0%,100%{transform:translateY(0)}
+      50%{transform:translateY(-4px)}
+    }
+
+    .contact-box {
+      margin-top:8px;
+      padding:12px 18px;
+      border-radius:16px;
+      background: rgba(255,255,255,0.08);
+      box-shadow: 0 0 12px rgba(180,100,255,0.3);
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      gap:6px;
+      animation: contactGlow 4s ease-in-out infinite, floatBox 6s ease-in-out infinite;
+      max-width:320px;
+      box-sizing: border-box;
+    }
+    .contact-item {
+      direction:ltr;
+      display:flex;
+      align-items:center;
+      gap:6px;
+      font-size:0.95rem;
+      color:#f0e6ff;
+      text-decoration:none;
+      transition:all 0.3s ease;
+    }
+    .contact-item:hover {
+      color:#ffffff;
+      text-shadow:0 0 6px rgba(200,150,255,0.8);
+      transform:translateY(-2px);
+    }
+    .contact-icon {font-size:1.1rem}
+    @keyframes contactGlow {
+      0%,100% { box-shadow:0 0 10px rgba(180,100,255,0.3); }
+      50% { box-shadow:0 0 18px rgba(200,150,255,0.5); }
+    }
 
     .footer {font-size:0.8rem;margin-top:18px;opacity:0.7}
     .footer a {color:white;text-decoration:none}
@@ -113,7 +167,7 @@
     }
     .lang-switch button {
       background:rgba(255,255,255,0.15);
-      color:white;border:none;padding:6px 12px;
+      color:white;border:none;padding:7px 14px;
       border-radius:50px;cursor:pointer;font-size:0.8rem;
       transition:all 0.3s ease;
     }
@@ -121,29 +175,33 @@
       background:rgba(255,255,255,0.3);transform:scale(1.05);
     }
 
-    .smooth-switch {
-      animation: smoothFadeSlide 0.9s ease;
-    }
+    .smooth-switch {animation:smoothFadeSlide 0.9s ease;}
     @keyframes smoothFadeSlide {
       0%{opacity:1;transform:translateY(0)}
       40%{opacity:0;transform:translateY(-15px)}
       60%{opacity:0;transform:translateY(15px)}
       100%{opacity:1;transform:translateY(0)}
     }
-
-    @keyframes fadeInUp {to {opacity:1;transform:translateY(0)}}
+    @keyframes fadeInUp {to{opacity:1;transform:translateY(0)}}
     @keyframes glowPulse {
       0%,100%{text-shadow:0 0 8px rgba(200,150,255,0.6)}
       50%{text-shadow:0 0 14px rgba(200,150,255,1)}
     }
 
     @media(max-width:480px){
-      .profile-container{
-        width:120px;
-        height:120px;
-      }
+      .profile-container{width:120px;height:120px;}
       .link-bar{gap:6px}
       .link-bar a{padding:6px 10px}
+      .about-box {
+        max-height: 35vh !important;
+        overflow-y: auto !important;
+        padding: 14px;
+      }
+      .contact-box {
+        max-width: 95vw;
+        padding: 14px 16px;
+        font-size: 0.95rem;
+      }
     }
   </style>
 </head>
@@ -151,17 +209,13 @@
   <canvas id="particles"></canvas>
 
   <div class="lang-switch">
-    <button id="btn-fa">Fa</button>
-    <button id="btn-en">En</button>
+    <button id="btn-fa">فارسی</button>
+    <button id="btn-en">English</button>
   </div>
 
   <div class="profile-container">
     <svg viewBox="0 0 100 100" preserveAspectRatio="xMidYMid slice">
-      <defs>
-        <clipPath id="circleView">
-          <circle cx="50" cy="50" r="50"/>
-        </clipPath>
-      </defs>
+      <defs><clipPath id="circleView"><circle cx="50" cy="50" r="50"/></clipPath></defs>
       <image clip-path="url(#circleView)" href="https://bayanbox.ir/view/6333081801587349279/Saeed2.jpg" width="100" height="100" preserveAspectRatio="xMidYMid slice"/>
     </svg>
   </div>
@@ -173,42 +227,59 @@
 
   <div class="link-bar" id="links"></div>
 
-  <div class="frame-wrapper">
-    <iframe src="https://www.aparat.com/video/video/embed/videohash/x722241/vt/frame?autoplay=false"
-      allow="autoplay; fullscreen" allowfullscreen></iframe>
+  <div class="about-box" id="about-text" tabindex="0" aria-label="درباره دکتر سعید مجتبی‌زاده">
+    دکتر سعید مجتبی‌زاده حسنلوئی، به عنوان اولین پژوهشگر پسادکتری مهندسی عمران-ژئوتکنیک در ایران، از سال 1394 بر توسعه‌ی الگوریتم‌های محاسباتی و مدلسازی عددی پیشرفته در حوزه‌ی ژئومکانیک لرزه‌ای متمرکز شده است. او رساله‌ی دوره‌ی دکتری تخصصی و طرح پژوهشی پسادکتری خویش را بر مسأله‌ی انتشار و پراکنش امواج لرزه‌ای در محیط‌های با خواص اورتوتروپیک از جمله عوارض توپوگرافی گوناگون، با استفاده از روش اجزای مرزی نیم‌فضای مستقیم در حوزه‌ی زمان معطوف نموده است. از موضوعات پژوهشی مورد علاقه‌ی وی می‌توان به توسعه‌ی روش‌های عددی همچون روش اجزای مرزی، اجزای محدود و رویکردهای ترکیبی جهت مدلسازی و تحلیل عددی مسائل لرزه‌ای، بررسی اثرات ساختگاهی ناشی از حضور عوارض توپوگرافی سطحی و زیر‌سطحی، مکانیک محیط‌های نانو/متخلخل و ایزولاسیون لرزه‌ای اشاره نمود. 
   </div>
 
-  <div class="footer">
-    © <a href="http://www.mojtabazadeh.ir/" target="_blank">Saeed Mojtabazadeh | www.mojtabazadeh.ir</a>
+  <div class="contact-box">
+    <a class="contact-item" href="mailto:mojtabazadeh@outlook.com"><span class="contact-icon" aria-hidden="true">📧</span>mojtabazadeh@outlook.com</a>
+    <a class="contact-item" href="tel:+989334115773"><span class="contact-icon" aria-hidden="true">📞</span>+98 933 411 5773</a>
+  </div>
+
+  <div class="footer" id="footer">
+    سعید مجتبی‌زاده ©
   </div>
 
   <script defer>
-    const data = {
-      fa:{title:"دکتر سعید مجتبی‌زاده",sub:"اولین فوق‌دکتری مهندسی ژئوتکنیک لرزه‌ای در ایران",links:[
-        {text:"پایگاه شخصی",href:"http://mojtabazadeh.ir/"},
-        {text:"پایگاه مقالات",href:"http://www.drmojtabazadeh.ir/"},
-        {text:"پایگاه مطالعات",href:"http://www.smojtabazadeh.ir/"},
-        {text:"اینستاگالری",href:"https://www.instagallery.ir/"},
-        {text:"پایگاه اَپرچِر",href:"http://mojtabazadeh-hasanlouei.ir/"},
-        {text:"گوگل اسکالر",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
-        {text:"پروفایل اورکید",href:"https://orcid.org/0000-0001-8508-4837"},
-        {text:"پایگاه انگلیسی",href:"https://www.mojtabazade.ir/"},
-      ]},
-      en:{title:"Dr. Saeed Mojtabazadeh",sub:"Postdoc Fellow in Geotechnical Engineering",links:[
-        {text:"Website",href:"http://mojtabazadeh.ir/"},
-        {text:"Researches",href:"http://www.drmojtabazadeh.ir/"},
-        {text:"Study Hub",href:"http://www.smojtabazadeh.ir/"},
-        {text:"Instagallery",href:"https://www.instagallery.ir/"},
-        {text:"Aperture",href:"http://mojtabazadeh-hasanlouei.ir/"},
-        {text:"Google Scholar",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
-        {text:"ORCID",href:"https://orcid.org/0000-0001-8508-4837"},
-        {text:"English Website",href:"https://www.mojtabazade.ir/"},
-      ]}
+    const data={
+      fa:{
+        title:"دکتر سعید مجتبی‌زاده",
+        sub:"اولین فوق‌دکتری مهندسی ژئوتکنیک لرزه‌ای در ایران",
+        about:`دکتر سعید مجتبی‌زاده حسنلوئی، به عنوان اولین پژوهشگر پسادکتری مهندسی عمران-ژئوتکنیک در ایران، از سال 1394 بر توسعه‌ی الگوریتم‌های محاسباتی و مدلسازی عددی پیشرفته در حوزه‌ی ژئومکانیک لرزه‌ای متمرکز شده است. او رساله‌ی دوره‌ی دکتری تخصصی و طرح پژوهشی پسادکتری خویش را بر مسأله‌ی انتشار و پراکنش امواج لرزه‌ای در محیط‌های با خواص اورتوتروپیک از جمله عوارض توپوگرافی گوناگون، با استفاده از روش اجزای مرزی نیم‌فضای مستقیم در حوزه‌ی زمان معطوف نموده است. از موضوعات پژوهشی مورد علاقه‌ی وی می‌توان به توسعه‌ی روش‌های عددی همچون روش اجزای مرزی، اجزای محدود و رویکردهای ترکیبی جهت مدلسازی و تحلیل عددی مسائل لرزه‌ای، بررسی اثرات ساختگاهی ناشی از حضور عوارض توپوگرافی سطحی و زیر‌سطحی، مکانیک محیط‌های نانو/متخلخل و ایزولاسیون لرزه‌ای اشاره نمود. `,
+        footer:"سعید مجتبی‌زاده ©",
+        links:[
+          {text:"پایگاه شخصی",href:"http://mojtabazadeh.ir/"},
+          {text:"پایگاه مقالات",href:"http://www.drmojtabazadeh.ir/"},
+          {text:"پایگاه مطالعات",href:"http://www.smojtabazadeh.ir/"},
+          {text:"اینستاگالری",href:"https://www.instagallery.ir/"},
+          {text:"پایگاه اَپرچِر",href:"http://mojtabazadeh-hasanlouei.ir/"},
+          {text:"گوگل اسکالر",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
+          {text:"پروفایل اورکید",href:"https://orcid.org/0000-0001-8508-4837"},
+          {text:"پایگاه انگلیسی",href:"https://www.mojtabazade.ir/"}
+        ]
+      },
+      en:{
+        title:"Dr. Saeed Mojtabazadeh",
+        sub:"Postdoc Fellow in Geotechnical Engineering",
+        about:`Dr. Saeed Mojtabazadeh is the pioneering geotechnical engineering postdoctoral researcher in Iran, specializing in computational algorithms. Since 2016, Dr. Mojtabazadeh has been dedicated to advanced numerical modeling in seismic geomechanics. His Ph.D. thesis and postdoctoral research focus on investigating SH-wave propagation in orthotropic mediums, along with topographic features, utilizing an exclusive approach known as the Direct Half-Space Time-Domain Boundary Element Method. He has developed multiple numerical approaches, including the Boundary Element Method (BEM), Finite Element Method (FEM), and Hybrid methods, applied to seismic analysis in geotechnical engineering.`,
+        footer:"Saeed Mojtabazadeh ©",
+        links:[
+          {text:"Website",href:"http://mojtabazadeh.ir/"},
+          {text:"Researches",href:"http://www.drmojtabazadeh.ir/"},
+          {text:"Studies",href:"http://www.smojtabazadeh.ir/"},
+          {text:"Instagallery",href:"https://www.instagallery.ir/"},
+          {text:"Aperture",href:"http://mojtabazadeh-hasanlouei.ir/"},
+          {text:"Google Scholar",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
+          {text:"ORCID",href:"https://orcid.org/0000-0001-8508-4837"},
+          {text:"English Hub",href:"https://www.mojtabazade.ir/"}
+        ]
+      }
     };
 
     const mainTitle=document.getElementById("main-title"),
           subTitle=document.getElementById("sub-title"),
-          linksContainer=document.getElementById("links");
+          linksContainer=document.getElementById("links"),
+          aboutText=document.getElementById("about-text");
 
     function buildLinks(lang){
       linksContainer.innerHTML="";
@@ -218,30 +289,31 @@
         linksContainer.appendChild(a);
       });
     }
-
     function switchLang(lang){
       localStorage.setItem("lang",lang);
       document.body.classList.add("smooth-switch");
       setTimeout(()=>{
         mainTitle.textContent=data[lang].title;
         subTitle.textContent=data[lang].sub;
+        aboutText.textContent=data[lang].about;
+        document.getElementById("footer").textContent=data[lang].footer;
         buildLinks(lang);
         if(lang==="en"){
           document.body.classList.add("lang-en");
           document.documentElement.dir="ltr";
-        } else {
+        }else{
           document.body.classList.remove("lang-en");
           document.documentElement.dir="rtl";
         }
       },300);
       setTimeout(()=>document.body.classList.remove("smooth-switch"),900);
     }
-
     const savedLang=localStorage.getItem("lang")||"fa";
     switchLang(savedLang);
-    document.getElementById("btn-fa").onclick=()=>switchLang("fa");
-    document.getElementById("btn-en").onclick=()=>switchLang("en");
+    document.getElementById("btn-fa").addEventListener("click",()=>switchLang("fa"));
+    document.getElementById("btn-en").addEventListener("click",()=>switchLang("en"));
 
+   
     const canvas=document.getElementById("particles"),ctx=canvas.getContext("2d");
     let particles=[];
     function createParticles(){
