--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>دکتر سعید مجتبی‌زاده</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
   <meta name="description" content="اولین فوق‌دکتری مهندسی ژئوتکنیک لرزه‌ای در ایران">
-  <meta name="keywords" content="دکتر سعید مجتبی‌زاده, Saeed Mojtabazadeh, ژئوتکنیک, پژوهشگر, نوآوری علمی">
+  <meta name="keywords" content="دکتر سعید مجتبی زاده, Saeed Mojtabazadeh, مهندسی ژئوتکنیک, پژوهشگر برتر استان زنجان, نخبه علمی">
   <meta name="author" content="Saeed Mojtabazadeh">
 
   <meta property="og:title" content="دکتر سعید مجتبی‌زاده">
@@ -109,7 +109,6 @@
       -webkit-overflow-scrolling: touch;
     }
 
-    /* ✅ چپ و راست چین شدن متن درباره من بر اساس زبان */
     body.lang-en .about-box {
       text-align:justify;
       text-align-last:left;
@@ -222,7 +221,7 @@
 
   <div class="title-wrapper">
     <h1 class="title-line" id="main-title">دکتر سعید مجتبی‌زاده</h1>
-    <h2 class="title-sub" id="sub-title">اولین فوق‌دکتری مهندسی ژئوتکنیک لرزه‌ای در ایران</h2>
+    <h2 class="title-sub" id="sub-title">فوق‌دکتری مهندسی عمران در گرایش ژئوتکنیک لرزه‌ای</h2>
   </div>
 
   <div class="link-bar" id="links"></div>
@@ -244,7 +243,7 @@
     const data={
       fa:{
         title:"دکتر سعید مجتبی‌زاده",
-        sub:"اولین فوق‌دکتری مهندسی ژئوتکنیک لرزه‌ای در ایران",
+        sub:"فوق‌دکتری مهندسی عمران در گرایش ژئوتکنیک لرزه‌ای",
         about:`دکتر سعید مجتبی‌زاده حسنلوئی، به عنوان اولین پژوهشگر پسادکتری مهندسی عمران-ژئوتکنیک در ایران، از سال 1394 بر توسعه‌ی الگوریتم‌های محاسباتی و مدلسازی عددی پیشرفته در حوزه‌ی ژئومکانیک لرزه‌ای متمرکز شده است. او رساله‌ی دوره‌ی دکتری تخصصی و طرح پژوهشی پسادکتری خویش را بر مسأله‌ی انتشار و پراکنش امواج لرزه‌ای در محیط‌های با خواص اورتوتروپیک از جمله عوارض توپوگرافی گوناگون، با استفاده از روش اجزای مرزی نیم‌فضای مستقیم در حوزه‌ی زمان معطوف نموده است. از موضوعات پژوهشی مورد علاقه‌ی وی می‌توان به توسعه‌ی روش‌های عددی همچون روش اجزای مرزی، اجزای محدود و رویکردهای ترکیبی جهت مدلسازی و تحلیل عددی مسائل لرزه‌ای، بررسی اثرات ساختگاهی ناشی از حضور عوارض توپوگرافی سطحی و زیر‌سطحی، مکانیک محیط‌های نانو/متخلخل و ایزولاسیون لرزه‌ای اشاره نمود. `,
         footer:"سعید مجتبی‌زاده ©",
         links:[
@@ -313,7 +312,6 @@
     document.getElementById("btn-fa").addEventListener("click",()=>switchLang("fa"));
     document.getElementById("btn-en").addEventListener("click",()=>switchLang("en"));
 
-   
     const canvas=document.getElementById("particles"),ctx=canvas.getContext("2d");
     let particles=[];
     function createParticles(){
