--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
   <meta property="og:url" content="http://www.mojtabazadeh.ir/">
   <meta name="twitter:card" content="summary_large_image">
 
-  <link rel="icon" type="image/png" sizes="512x512" href="https://github.com/mojtabazadeh/saeedmojtabazadeh.github.io/blob/main/favicon.png?raw=true">
+  <!-- Favicon با id برای تغییر پویا -->
+  <link id="favicon" rel="icon" type="image/png" sizes="512x512" 
+        href="https://yourdomain.com/favicon-fa.png">
+
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;600;800&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
   <style>
@@ -36,8 +39,7 @@
     #particles {position:fixed;top:0;left:0;width:100%;height:100%;z-index:-1}
 
     .profile-container {
-      width:150px;
-      height:150px;
+      width:150px;height:150px;
       margin:25px auto 16px;
       border-radius:50%;
       box-shadow:0 0 25px rgba(255,120,255,0.6),0 0 45px rgba(140,70,255,0.3);
@@ -45,16 +47,21 @@
       background:rgba(255,255,255,0.05);
       position:relative;
       overflow:visible;
+      transition: transform 0.4s ease;
+    }
+    .profile-container:hover {
+      transform:scale(1.05);
+      box-shadow:0 0 35px rgba(255,180,255,0.7),0 0 65px rgba(150,90,255,0.5);
     }
     .profile-container svg {width:100%;height:100%;display:block}
     @keyframes floatMove {
       0%,100%{transform:translateY(0)}
-      50%{transform:translateY(-6px)}
+      50%{transform:translateY(-8px)}
     }
 
     .title-wrapper {
       max-width:90vw;margin-bottom:20px;
-      animation:fadeInUp 1s ease forwards;opacity:0;transform:translateY(10px);
+      animation:fadeInUp 1.2s ease forwards;opacity:0;transform:translateY(10px);
     }
     .title-line {
       font-size:clamp(1.6rem,5vw,2.4rem);
@@ -62,7 +69,7 @@
       background:linear-gradient(90deg,#ffccff,#cc99ff,#9966ff);
       -webkit-background-clip:text;-webkit-text-fill-color:transparent;
       text-shadow:0 0 12px rgba(200,150,255,0.6);
-      animation:glowPulse 4s ease-in-out infinite;
+      animation:glowPulse 3s ease-in-out infinite;
     }
     .title-sub {
       font-size:clamp(1rem,3vw,1.2rem);
@@ -71,11 +78,15 @@
       margin-top:4px;
       text-shadow:0 1px 3px rgba(0,0,0,0.4);
     }
+    @keyframes glowPulse {
+      0%,100%{text-shadow:0 0 8px rgba(200,150,255,0.6),0 0 16px rgba(160,90,255,0.3)}
+      50%{text-shadow:0 0 20px rgba(230,180,255,1),0 0 30px rgba(200,120,255,0.7)}
+    }
 
     .link-bar {
       display:flex;flex-wrap:wrap;justify-content:center;
       gap:10px;max-width:95vw;margin-bottom:16px;
-      animation:fadeInUp 1.2s ease forwards;opacity:0;transform:translateY(10px);
+      animation:fadeInUp 1.4s ease forwards;opacity:0;transform:translateY(10px);
     }
     .link-bar a {
       background:rgba(255,255,255,0.1);
@@ -84,11 +95,20 @@
       border-radius:25px;
       font-size:clamp(0.8rem,3vw,0.95rem);
       text-decoration:none;
-      transition:all 0.3s ease;
+      transition:all 0.35s ease;
+      position:relative;
+      overflow:hidden;
     }
+    .link-bar a::after {
+      content:"";position:absolute;left:50%;top:50%;
+      width:0;height:0;border-radius:50%;
+      background:rgba(255,255,255,0.3);
+      transform:translate(-50%,-50%);
+      transition:width 0.5s ease,height 0.5s ease;
+    }
+    .link-bar a:hover::after {width:200%;height:500%;}
     .link-bar a:hover {
-      background:rgba(255,255,255,0.25);
-      box-shadow:0 0 12px rgba(180,100,255,0.7);
+      box-shadow:0 0 14px rgba(200,150,255,0.6);
       transform:translateY(-2px);
     }
 
@@ -107,20 +127,12 @@
       overflow-y:auto;
       max-height:40vh;
       -webkit-overflow-scrolling: touch;
+      transition:box-shadow 0.4s ease;
     }
-
-    body.lang-en .about-box {
-      text-align:justify;
-      text-align-last:left;
-    }
-    body:not(.lang-en) .about-box {
-      text-align:justify;
-      text-align-last:right;
-    }
-
+    .about-box:hover {box-shadow:0 0 20px rgba(200,150,255,0.5);}
     @keyframes floatBox {
       0%,100%{transform:translateY(0)}
-      50%{transform:translateY(-4px)}
+      50%{transform:translateY(-6px)}
     }
 
     .contact-box {
@@ -152,7 +164,6 @@
       text-shadow:0 0 6px rgba(200,150,255,0.8);
       transform:translateY(-2px);
     }
-    .contact-icon {font-size:1.1rem}
     @keyframes contactGlow {
       0%,100% { box-shadow:0 0 10px rgba(180,100,255,0.3); }
       50% { box-shadow:0 0 18px rgba(200,150,255,0.5); }
@@ -168,24 +179,27 @@
       background:rgba(255,255,255,0.15);
       color:white;border:none;padding:7px 14px;
       border-radius:50px;cursor:pointer;font-size:0.8rem;
-      transition:all 0.3s ease;
+      transition:all 0.35s ease;overflow:hidden;position:relative;
     }
+    .lang-switch button::before {
+      content:"";position:absolute;left:50%;top:50%;
+      width:0;height:0;background:rgba(255,255,255,0.25);
+      border-radius:50%;transform:translate(-50%,-50%);
+      transition:width 0.5s ease,height 0.5s ease;
+    }
+    .lang-switch button:hover::before {width:200%;height:500%;}
     .lang-switch button:hover {
       background:rgba(255,255,255,0.3);transform:scale(1.05);
     }
 
-    .smooth-switch {animation:smoothFadeSlide 0.9s ease;}
-    @keyframes smoothFadeSlide {
-      0%{opacity:1;transform:translateY(0)}
-      40%{opacity:0;transform:translateY(-15px)}
-      60%{opacity:0;transform:translateY(15px)}
-      100%{opacity:1;transform:translateY(0)}
+    .smooth-switch {
+      animation:fadeScale 0.6s ease;
+    }
+    @keyframes fadeScale {
+      0%{opacity:0.4;transform:scale(0.97)}
+      100%{opacity:1;transform:scale(1)}
     }
     @keyframes fadeInUp {to{opacity:1;transform:translateY(0)}}
-    @keyframes glowPulse {
-      0%,100%{text-shadow:0 0 8px rgba(200,150,255,0.6)}
-      50%{text-shadow:0 0 14px rgba(200,150,255,1)}
-    }
 
     @media(max-width:480px){
       .profile-container{width:120px;height:120px;}
@@ -226,141 +240,123 @@
 
   <div class="link-bar" id="links"></div>
 
-  <div class="about-box" id="about-text" tabindex="0" aria-label="درباره دکتر سعید مجتبی‌زاده">
-    دکتر سعید مجتبی‌زاده حسنلوئی، به عنوان اولین پژوهشگر پسادکتری مهندسی عمران-ژئوتکنیک در ایران، از سال 1394 بر توسعه‌ی الگوریتم‌های محاسباتی و مدلسازی عددی پیشرفته در حوزه‌ی ژئومکانیک لرزه‌ای متمرکز شده است. او رساله‌ی دوره‌ی دکتری تخصصی و طرح پژوهشی پسادکتری خویش را بر مسأله‌ی انتشار و پراکنش امواج لرزه‌ای در محیط‌های با خواص اورتوتروپیک از جمله عوارض توپوگرافی گوناگون، با استفاده از روش اجزای مرزی نیم‌فضای مستقیم در حوزه‌ی زمان معطوف نموده است. از موضوعات پژوهشی مورد علاقه‌ی وی می‌توان به توسعه‌ی روش‌های عددی همچون روش اجزای مرزی، اجزای محدود و رویکردهای ترکیبی جهت مدلسازی و تحلیل عددی مسائل لرزه‌ای، بررسی اثرات ساختگاهی ناشی از حضور عوارض توپوگرافی سطحی و زیر‌سطحی، مکانیک محیط‌های نانو/متخلخل و ایزولاسیون لرزه‌ای اشاره نمود. 
-  </div>
+  <div class="about-box" id="about-text"></div>
 
   <div class="contact-box">
-    <a class="contact-item" href="mailto:mojtabazadeh@outlook.com"><span class="contact-icon" aria-hidden="true">📧</span>mojtabazadeh@outlook.com</a>
-    <a class="contact-item" href="tel:+989334115773"><span class="contact-icon" aria-hidden="true">📞</span>+98 933 411 5773</a>
+    <a class="contact-item" href="mailto:mojtabazadeh@outlook.com"><span>📧</span>mojtabazadeh@outlook.com</a>
+    <a class="contact-item" href="tel:+989334115773"><span>📞</span>+98 933 411 5773</a>
   </div>
 
-  <div class="footer" id="footer">
-    سعید مجتبی‌زاده ©
-  </div>
+  <div class="footer" id="footer">سعید مجتبی‌زاده ©</div>
 
-  <script defer>
-    const data={
-      fa:{
-        title:"دکتر سعید مجتبی‌زاده",
-        sub:"فوق‌دکتری مهندسی عمران در گرایش ژئوتکنیک لرزه‌ای",
-        about:`دکتر سعید مجتبی‌زاده حسنلوئی، به عنوان اولین پژوهشگر پسادکتری مهندسی عمران-ژئوتکنیک در ایران، از سال 1394 بر توسعه‌ی الگوریتم‌های محاسباتی و مدلسازی عددی پیشرفته در حوزه‌ی ژئومکانیک لرزه‌ای متمرکز شده است. او رساله‌ی دوره‌ی دکتری تخصصی و طرح پژوهشی پسادکتری خویش را بر مسأله‌ی انتشار و پراکنش امواج لرزه‌ای در محیط‌های با خواص اورتوتروپیک از جمله عوارض توپوگرافی گوناگون، با استفاده از روش اجزای مرزی نیم‌فضای مستقیم در حوزه‌ی زمان معطوف نموده است. از موضوعات پژوهشی مورد علاقه‌ی وی می‌توان به توسعه‌ی روش‌های عددی همچون روش اجزای مرزی، اجزای محدود و رویکردهای ترکیبی جهت مدلسازی و تحلیل عددی مسائل لرزه‌ای، بررسی اثرات ساختگاهی ناشی از حضور عوارض توپوگرافی سطحی و زیر‌سطحی، مکانیک محیط‌های نانو/متخلخل و ایزولاسیون لرزه‌ای اشاره نمود. `,
-        footer:"سعید مجتبی‌زاده ©",
-        links:[
-          {text:"پایگاه شخصی",href:"http://mojtabazadeh.ir/"},
-          {text:"پایگاه مقالات",href:"http://www.drmojtabazadeh.ir/"},
-          {text:"پایگاه مطالعات",href:"http://www.smojtabazadeh.ir/"},
-          {text:"اینستاگالری",href:"https://www.instagallery.ir/"},
-          {text:"پایگاه اَپرچِر",href:"http://mojtabazadeh-hasanlouei.ir/"},
-          {text:"گوگل اسکالر",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
-          {text:"پروفایل اورکید",href:"https://orcid.org/0000-0001-8508-4837"},
-          {text:"پایگاه انگلیسی",href:"https://www.mojtabazade.ir/"}
-        ]
-      },
-      en:{
-        title:"Dr. Saeed Mojtabazadeh",
-        sub:"Postdoc Fellow in Geotechnical Engineering",
-        about:`Dr. Saeed Mojtabazadeh is the pioneering geotechnical engineering postdoctoral researcher in Iran, specializing in computational algorithms. Since 2016, Dr. Mojtabazadeh has been dedicated to advanced numerical modeling in seismic geomechanics. His Ph.D. thesis and postdoctoral research focus on investigating SH-wave propagation in orthotropic mediums, along with topographic features, utilizing an exclusive approach known as the Direct Half-Space Time-Domain Boundary Element Method. He has developed multiple numerical approaches, including the Boundary Element Method (BEM), Finite Element Method (FEM), and Hybrid methods, applied to seismic analysis in geotechnical engineering.`,
-        footer:"Saeed Mojtabazadeh ©",
-        links:[
-          {text:"Website",href:"http://mojtabazadeh.ir/"},
-          {text:"Researches",href:"http://www.drmojtabazadeh.ir/"},
-          {text:"Studies",href:"http://www.smojtabazadeh.ir/"},
-          {text:"Instagallery",href:"https://www.instagallery.ir/"},
-          {text:"Aperture",href:"http://mojtabazadeh-hasanlouei.ir/"},
-          {text:"Google Scholar",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
-          {text:"ORCID",href:"https://orcid.org/0000-0001-8508-4837"},
-          {text:"English Hub",href:"https://www.mojtabazade.ir/"}
-        ]
+<script defer>
+const data={
+  fa:{title:"دکتر سعید مجتبی‌زاده",
+      sub:"فوق‌دکتری مهندسی عمران در گرایش ژئوتکنیک لرزه‌ای",
+      about:`دکتر سعید مجتبی‌زاده حسنلوئی ...`,
+      footer:"سعید مجتبی‌زاده ©",
+      links:[{text:"پایگاه شخصی",href:"http://mojtabazadeh.ir/"}]
+  },
+  en:{title:"Dr. Saeed Mojtabazadeh",
+      sub:"Postdoc Fellow in Geotechnical Engineering",
+      about:`Dr. Saeed Mojtabazadeh is the pioneering ...`,
+      footer:"Saeed Mojtabazadeh ©",
+      links:[{text:"Website",href:"http://mojtabazadeh.ir/"}]
+  }
+};
+
+const mainTitle=document.getElementById("main-title"),
+      subTitle=document.getElementById("sub-title"),
+      linksContainer=document.getElementById("links"),
+      aboutText=document.getElementById("about-text"),
+      favicon=document.getElementById("favicon");
+
+function buildLinks(lang){
+  linksContainer.innerHTML="";
+  data[lang].links.forEach(l=>{
+    const a=document.createElement("a");
+    a.href=l.href;a.target="_blank";a.textContent=l.text;
+    linksContainer.appendChild(a);
+  });
+}
+function switchLang(lang){
+  localStorage.setItem("lang",lang);
+  document.body.classList.add("smooth-switch");
+  setTimeout(()=>{
+    mainTitle.textContent=data[lang].title;
+    subTitle.textContent=data[lang].sub;
+    aboutText.textContent=data[lang].about;
+    document.getElementById("footer").textContent=data[lang].footer;
+    buildLinks(lang);
+    if(lang==="en"){
+      document.body.classList.add("lang-en");
+      document.documentElement.dir="ltr";
+      favicon.href="https://yourdomain.com/favicon-en.png";
+    }else{
+      document.body.classList.remove("lang-en");
+      document.documentElement.dir="rtl";
+      favicon.href="https://yourdomain.com/favicon-fa.png";
+    }
+  },150);
+  setTimeout(()=>document.body.classList.remove("smooth-switch"),600);
+}
+const savedLang=localStorage.getItem("lang")||"fa";
+switchLang(savedLang);
+document.getElementById("btn-fa").addEventListener("click",()=>switchLang("fa"));
+document.getElementById("btn-en").addEventListener("click",()=>switchLang("en"));
+
+// -------- Particles Effect (تقویت شده) --------
+const canvas=document.getElementById("particles"),ctx=canvas.getContext("2d");
+let particles=[];
+function createParticles(){
+  const count=Math.floor((window.innerWidth*window.innerHeight)/11000);
+  particles=Array.from({length:count},()=>({
+    x:Math.random()*window.innerWidth,
+    y:Math.random()*window.innerHeight,
+    r:Math.random()*1.8+1,
+    dx:(Math.random()-0.5)*0.4,
+    dy:(Math.random()-0.5)*0.4
+  }));
+}
+function resizeParticles(){
+  const ratio=window.devicePixelRatio||1;
+  canvas.width=window.innerWidth*ratio;
+  canvas.height=window.innerHeight*ratio;
+  ctx.setTransform(1,0,0,1,0,0);
+  ctx.scale(ratio,ratio);
+  createParticles();
+}
+resizeParticles();
+window.addEventListener("resize",resizeParticles);
+
+(function draw(){
+  ctx.clearRect(0,0,window.innerWidth,window.innerHeight);
+  particles.forEach(p=>{
+    ctx.beginPath();
+    ctx.fillStyle="rgba(200,150,255,0.8)";
+    ctx.arc(p.x,p.y,p.r,0,Math.PI*2);
+    ctx.fill();
+    p.x+=p.dx;p.y+=p.dy;
+    if(p.x<0||p.x>window.innerWidth)p.dx*=-1;
+    if(p.y<0||p.y>window.innerHeight)p.dy*=-1;
+  });
+  ctx.lineWidth=0.5;
+  for(let i=0;i<particles.length;i++){
+    for(let j=i+1;j<particles.length;j++){
+      const dx=particles[i].x-particles[j].x;
+      const dy=particles[i].y-particles[j].y;
+      const dist=Math.sqrt(dx*dx+dy*dy);
+      if(dist<130){
+        ctx.strokeStyle=`rgba(200,150,255,${1-dist/130})`;
+        ctx.beginPath();
+        ctx.moveTo(particles[i].x,particles[i].y);
+        ctx.lineTo(particles[j].x,particles[j].y);
+        ctx.stroke();
       }
-    };
-
-    const mainTitle=document.getElementById("main-title"),
-          subTitle=document.getElementById("sub-title"),
-          linksContainer=document.getElementById("links"),
-          aboutText=document.getElementById("about-text");
-
-    function buildLinks(lang){
-      linksContainer.innerHTML="";
-      data[lang].links.forEach(l=>{
-        const a=document.createElement("a");
-        a.href=l.href;a.target="_blank";a.textContent=l.text;
-        linksContainer.appendChild(a);
-      });
     }
-    function switchLang(lang){
-      localStorage.setItem("lang",lang);
-      document.body.classList.add("smooth-switch");
-      setTimeout(()=>{
-        mainTitle.textContent=data[lang].title;
-        subTitle.textContent=data[lang].sub;
-        aboutText.textContent=data[lang].about;
-        document.getElementById("footer").textContent=data[lang].footer;
-        buildLinks(lang);
-        if(lang==="en"){
-          document.body.classList.add("lang-en");
-          document.documentElement.dir="ltr";
-        }else{
-          document.body.classList.remove("lang-en");
-          document.documentElement.dir="rtl";
-        }
-      },300);
-      setTimeout(()=>document.body.classList.remove("smooth-switch"),900);
-    }
-    const savedLang=localStorage.getItem("lang")||"fa";
-    switchLang(savedLang);
-    document.getElementById("btn-fa").addEventListener("click",()=>switchLang("fa"));
-    document.getElementById("btn-en").addEventListener("click",()=>switchLang("en"));
-
-    const canvas=document.getElementById("particles"),ctx=canvas.getContext("2d");
-    let particles=[];
-    function createParticles(){
-      const count=Math.floor((window.innerWidth*window.innerHeight)/12000);
-      particles=Array.from({length:count},()=>({
-        x:Math.random()*window.innerWidth,
-        y:Math.random()*window.innerHeight,
-        r:Math.random()*1.8+1,
-        dx:(Math.random()-0.5)*0.4,
-        dy:(Math.random()-0.5)*0.4
-      }));
-    }
-    function resizeParticles(){
-      const ratio=window.devicePixelRatio||1;
-      canvas.width=window.innerWidth*ratio;
-      canvas.height=window.innerHeight*ratio;
-      ctx.setTransform(1,0,0,1,0,0);
-      ctx.scale(ratio,ratio);
-      createParticles();
-    }
-    resizeParticles();
-    window.addEventListener("resize",resizeParticles);
-
-    (function draw(){
-      ctx.clearRect(0,0,window.innerWidth,window.innerHeight);
-      ctx.fillStyle="rgba(200,150,255,0.8)";
-      particles.forEach(p=>{
-        ctx.beginPath();ctx.arc(p.x,p.y,p.r,0,Math.PI*2);ctx.fill();
-        p.x+=p.dx;p.y+=p.dy;
-        if(p.x<0||p.x>window.innerWidth)p.dx*=-1;
-        if(p.y<0||p.y>window.innerHeight)p.dy*=-1;
-      });
-      ctx.strokeStyle="rgba(200,150,255,0.2)";
-      ctx.lineWidth=0.5;
-      for(let i=0;i<particles.length;i++){
-        for(let j=i+1;j<particles.length;j++){
-          const dx=particles[i].x-particles[j].x;
-          const dy=particles[i].y-particles[j].y;
-          const dist=Math.sqrt(dx*dx+dy*dy);
-          if(dist<120){
-            ctx.beginPath();
-            ctx.moveTo(particles[i].x,particles[i].y);
-            ctx.lineTo(particles[j].x,particles[j].y);
-            ctx.stroke();
-          }
-        }
-      }
-      requestAnimationFrame(draw);
-    })();
-  </script>
+  }
+  requestAnimationFrame(draw);
+})();
+</script>
 </body>
 </html>
