--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fa" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>دکتر سعید مجتبی‌زاده</title>
+  <title>شبکه علمی دکتر سعید مجتبی‌زاده</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
   <meta name="description" content="اولین فوق‌دکتری مهندسی ژئوتکنیک لرزه‌ای در ایران">
   <meta name="keywords" content="دکتر سعید مجتبی زاده, Saeed Mojtabazadeh, مهندسی ژئوتکنیک, پژوهشگر برتر استان زنجان, نخبه علمی">
