--- a/index.html
+++ b/index.html
@@ -485,18 +485,12 @@
 
 
 
-const papers = {
-  fa: [
-    {text:"27. The Orthotropy Effect of Underground Inclusion...", link:"https://drive.google.com/file/d/1gZ8aF2_FtYW0XBLlXkPnH97Sx1cUNRxv/view"},
-    {text:"26. Seismic Response of the Orthotropic Ground Surface...", link:"https://drive.google.com/file/d/1hZ532hBk93MWAzn8dMg24jnVr2pg0ZNg/view"}
-    // ... بقیه لینک‌ها
-  ],
-  en: [
-    {text:"27. The Orthotropy Effect of Underground Inclusion...", link:"https://drive.google.com/file/d/1gZ8aF2_FtYW0XBLlXkPnH97Sx1cUNRxv/view"},
-    {text:"26. Seismic Response of the Orthotropic Ground Surface...", link:"https://drive.google.com/file/d/1hZ532hBk93MWAzn8dMg24jnVr2pg0ZNg/view"}
-    // ... باقی مقالات
-  ]
-};
+
+const papers = [
+  {text:"27. The Orthotropy Effect of Underground Inclusion on the Seismic Response of Ground Surface", link:"https://drive.google.com/file/d/1gZ8aF2_FtYW0XBLlXkPnH97Sx1cUNRxv/view"},
+  {text:"26. Seismic Response of the Orthotropic Ground Surface Including Underground Circular Unlined Tunnel", link:"https://drive.google.com/file/d/1hZ532hBk93MWAzn8dMg24jnVr2pg0ZNg/view"}
+  // ... بقیه لینک‌ها
+];
 
 const modal=document.getElementById("modal"),
       modalLinks=document.getElementById("modal-links"),
@@ -507,7 +501,8 @@ const modal=document.getElementById("modal"),
 function buildModal(lang){
   modalLinks.innerHTML="";
   modalTitle.textContent = (lang==="fa") ? "دانلود مقالات" : "Download Papers";
-  papers[lang].forEach(p=>{
+  modalLinks.style.textAlign = "left"; // همیشه چپ‌چین
+  papers.forEach(p=>{
     const a=document.createElement("a");
     a.href=p.link;
     a.target="_blank";
@@ -525,6 +520,7 @@ closeModal.addEventListener("click",()=>modal.style.display="none");
 modal.addEventListener("click",e=>{
   if(e.target===modal) modal.style.display="none";
 });
+
 
 
 
