--- a/index.html
+++ b/index.html
@@ -308,17 +308,10 @@
 
 
 
-<div class="download-btn-container">
-  <button id="btn-download">📥 دانلود مقالات</button>
+<div class="download-btn">
+  <button id="btn-download">📄</button>
 </div>
 
-<div class="modal-overlay" id="modal">
-  <div class="modal-content">
-    <span class="modal-close" id="close-modal">×</span>
-    <h3 class="modal-title" id="modal-title">دانلود مقالات</h3>
-    <div class="modal-links" id="modal-links"></div>
-  </div>
-</div>
 
 
 
@@ -529,6 +522,27 @@ modal.addEventListener("click",e=>{
 
 
     
-  </script>  
+  </script>
+
+
+
+
+
+
+<div id="modal" class="modal">
+  <div class="modal-content">
+    <span id="close-modal" class="close-btn">&times;</span>
+    <h3 id="modal-title">دانلود مقالات</h3>
+    <div id="modal-links"></div>
+  </div>
+</div>
+
+
+
+
+
+
+
+  
 </body>
 </html>
