--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
   align-items: center;
 }
 #modal-content {
-  background: rgba(255,255,255,0.08);
+  background: rgba(255, 255, 255, 0.95);
   border-radius: 12px;
   max-width: 400px;
   width: 90%;
