--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <meta property="og:title" content="دکتر سعید مجتبی‌زاده">
   <meta property="og:description" content="پایگاه دکتر سعید مجتبی‌زاده">
-  <meta property="og:image" content="https://bayanbox.ir/view/6333081801587349279/Saeed2.jpg">
+  <meta property="og:image" content="https://github.com/mojtabazadeh/saeedmojtabazadeh.github.io/blob/main/Mojtabazadeh.jpg?raw=true">
   <meta property="og:url" content="http://www.mojtabazadeh.ir/">
   <meta name="twitter:card" content="summary_large_image">
 
