--- a/index.html
+++ b/index.html
@@ -202,6 +202,48 @@
         font-size: 0.95rem;
       }
     }
+
+
+
+/* ✅ دکمه جدید دانلود مقالات */
+    .download-btn {
+      position: fixed;
+      top: 12px;
+      right: 12px;
+      z-index: 99;
+      padding: 8px 16px;
+      background: linear-gradient(90deg,#ff99ff,#cc66ff,#9966ff);
+      color: white;
+      font-weight: 600;
+      font-size: 0.85rem;
+      border: none;
+      border-radius: 30px;
+      cursor: pointer;
+      box-shadow: 0 0 12px rgba(200,150,255,0.6);
+      overflow: hidden;
+      transition: all 0.3s ease;
+      text-decoration: none;
+    }
+    .download-btn:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 20px rgba(220,170,255,0.8);
+    }
+    .download-btn::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: -100%;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(120deg,transparent,rgba(255,255,255,0.5),transparent);
+      transition: all 0.5s ease;
+    }
+    .download-btn:hover::before {
+      left: 100%;
+    }
+
+    
+    
   </style>
 </head>
 <body>
@@ -211,6 +253,13 @@
     <button id="btn-fa">فارسی</button>
     <button id="btn-en">English</button>
   </div>
+
+
+
+<!-- ✅ دکمه دانلود مقالات -->
+  <a href="https://www.mojtabazade.ir/research/" target="_blank" class="download-btn" id="download-btn">دانلود مقالات</a>
+
+  
 
   <div class="profile-container">
     <svg viewBox="0 0 100 100" preserveAspectRatio="xMidYMid slice">
@@ -279,6 +328,7 @@
           subTitle=document.getElementById("sub-title"),
           linksContainer=document.getElementById("links"),
           aboutText=document.getElementById("about-text");
+          downloadBtn=document.getElementById("download-btn"); // ✅ اضافه شد
 
     function buildLinks(lang){
       linksContainer.innerHTML="";
@@ -297,6 +347,7 @@
         aboutText.textContent=data[lang].about;
         document.getElementById("footer").textContent=data[lang].footer;
         buildLinks(lang);
+        downloadBtn.textContent=(lang==="en"?"Download Papers":"دانلود مقالات"); // ✅ متن دکمه تغییر می‌کند
         if(lang==="en"){
           document.body.classList.add("lang-en");
           document.documentElement.dir="ltr";
