--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
         aboutText.textContent=data[lang].about;
         document.getElementById("footer").textContent=data[lang].footer;
         buildLinks(lang);
-        downloadBtn.textContent=(lang==="en"?"The DASBEM Project":"پروژه داس‌بم");
+        downloadBtn.textContent=(lang==="en"?"DASBEM Project":"پروژه داس‌بم");
         if(lang==="en"){
           document.body.classList.add("lang-en");
           document.documentElement.dir="ltr";
